--- a/public/sass/parts/_sidenav.scss
+++ b/public/sass/parts/_sidenav.scss
@@ -23,6 +23,7 @@
    margin-top: 3.5rem;
    display: flex;
    flex-direction: column;
+   justify-content: space-between;
    text-transform: uppercase;
 
    @media only screen and (max-width: $bp-seven) {
@@ -186,6 +187,221 @@
 
       &:active {
          background-color: $color-blue-strong;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__editarLoja {
+      width: 20rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      background-color: $color-orange-light;
+      color: $color-white;
+      border: none;
+      border-radius: o;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-orange-light;
+      }
+
+      &:active {
+         background-color: $color-orange-strong;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__storeremovebtn {
+      width: 20rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      background-color: $color-red-light;
+      color: $color-white;
+      border: none;
+      border-radius: o;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-red-light;
+      }
+
+      &:active {
+         background-color: $color-red-strong;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__productremovebtn {
+      width: 20rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      background-color: $color-red-light;
+      color: $color-white;
+      border: none;
+      border-radius: o;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-red-light;
+      }
+
+      &:active {
+         background-color: $color-red-strong;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__minhaslojas {
+      width: 20rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      text-decoration: none;
+
+      background-color: $color-blue;
+      color: $color-white;
+
+      border: none;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-blue-light;
+      }
+
+      &:active {
+         background-color: $color-blue-strong;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
+   }
+
+   &__adicionarProduto {
+      width: 20rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      text-decoration: none;
+
+      background-color: $color-green;
+      color: $color-white;
+
+      border: none;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-green-light;
+      }
+
+      &:active {
+         background-color: $color-green-strong;
       }
 
       @media only screen and (max-width: $bp-seven) {
