--- a/views/base.pug
+++ b/views/base.pug
@@ -19,7 +19,7 @@ html(lang='en')
         //Header
         include _header
         //SIDEBAR
-        include _sidebar
+        //- include _sidebar
         //Content
         block content
             h1 This is a placeholder heading
