--- a/views/newProduct.pug
+++ b/views/newProduct.pug
@@ -1,36 +1,40 @@
 extends base
 
 block content
+    include _sidebar
     .produtoDashboard__container
         section.produtoDashboard
             .produtoDashboard__item
-                form.form.form--login(action='#')
+                form.form.form--createProduct(action='#')
+                    .form__group
+                        label.form__label(for='nome') Loja do produto
+                        input#storeId.form__input(type='text' value=`${storeId}` name='' readonly='readonly' required='')
                     .form__group
                         label.form__label(for='nome') Nome do produto
                         input#nome.form__input(type='text' name='' placeholder='' required='')
                     .form__group
-                        label.form__label(for='nomeLoja') Tipo do produto
-                        input#nomeLoja.form__input(type='text' name='' placeholder='' required='')
+                        label.form__label(for='tipo') Tipo do produto
+                        input#tipo.form__input(type='text' name='' placeholder='' required='')
                     .form__group
-                        label.form__label(for='nomeLoja') Pre&ccedil;o do produto
-                        input#nomeLoja.form__input(type='text' name='' placeholder='' required='')
+                        label.form__label(for='preco') Pre&ccedil;o do produto
+                        input#preco.form__input(type='text' name='' placeholder='' required='')
                     .form__group
-                        label.form__label(for='nomeLoja') Tamanho do produto
-                        input#nomeLoja.form__input(type='text' name='' placeholder='' required='')
+                        label.form__label(for='tamanho') Tamanho do produto
+                        input#tamanho.form__input(type='text' name='' placeholder='' required='')
                     .form__group
-                        label.form__label(for='nomeLoja') Cor do produto
-                        input#nomeLoja.form__input(type='text' name='' placeholder='' required='')
+                        label.form__label(for='cor') Cor do produto
+                        input#cor.form__input(type='text' name='' placeholder='' required='')
                     .form__group
-                        label.form__label(for='nomeLoja') Marca do produto
-                        input#nomeLoja.form__input(type='text' name='' placeholder='' required='')
+                        label.form__label(for='marca') Marca do produto
+                        input#marca.form__input(type='text' name='' placeholder='')
                     .form__group
-                        label.form__label(for='nomeLoja') Genero do produto
-                        input#nomeLoja.form__input(type='text' name='' placeholder='' required='')
+                        label.form__label(for='genero') Genero do produto
+                        input#genero.form__input(type='text' name='' placeholder='')
                     .form__group
-                        label.form__label(for='nomeLoja') Descri&ccedil;&atilde;o do produto
-                        input#nomeLoja.form__input(type='text' name='' placeholder='' required='')
-                    img.form__userimg(src='imagens/dev/lojas/storebasicimg.png' alt='')
-                    input#photo.btn.form__upload(type='file' accept='image/*' name='photoo')
-                    label(for='photo') Adicionar foto
+                        label.form__label(for='descricao') Descri&ccedil;&atilde;o do produto
+                        input#descricao.form__input(type='text' name='' placeholder='' required='')
+                        img.form__userimg(src='/imagens/dev/lojas/store.jpg' alt='')
+                    input#productimg.btn.form__upload(type='file' accept='image/*' name='photoo')
+                    label(for='productimg') Adicionar foto
                     .form__group
-                        button.btn.login__btn Criar produto
+                        button.btn.createProduct__btn Criar produto
