--- a/views/sidebarlojas.pug
+++ b/views/sidebarlojas.pug
@@ -16,4 +16,18 @@
           svg.side-nav__icon
             use(xlink:href='/imagens/dev/sprite.svg#icon-tag')
           span Categorias
-      if url === 'lojas'
+      if lojas && !usuario && !storeOwner
+        button.side-nav__generobtn--homem
+          svg.side-nav__icon
+            use(xlink:href='/imagens/dev/sprite2.svg#icon-man')
+          span Homem
+      else if lojas && usuario && !storeOwner
+        button.side-nav__generobtn--homem
+          svg.side-nav__icon
+            use(xlink:href='/imagens/dev/sprite2.svg#icon-man')
+          span Homem
+      else if lojas && !usuario && storeOwner
+        button.side-nav__generobtn--homem
+          svg.side-nav__icon
+            use(xlink:href='/imagens/dev/sprite2.svg#icon-man')
+          span Homem
