--- a/views/storeOwnerAccount.pug
+++ b/views/storeOwnerAccount.pug
@@ -1,6 +1,7 @@
 extends base
 
 block content
+    include sidebardonolojame
     .storeOwnerDashboard__container
         section.storeOwnerDashboard
             .storeOwnerDashboard__item
