--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -50,7 +50,7 @@ grey 2: #989c94
 
    --color-black: rgb(0, 0, 0);
 
-   --color-main-back: #8d8f8d;
+   --color-main-back: #7f8a8b;
 
    --shadow-color: 0px 0px 0.3px 0.8px var(--color-primary);
    --shadow-color-light: #9f7d84;
