--- a/public/sass/parts/_produtos.scss
+++ b/public/sass/parts/_produtos.scss
@@ -15,14 +15,19 @@
    color: var(--color-white);
 }
 
+.produto__solo {
+   display: grid;
+   grid-template-columns: 1 / 3;
+}
+
 .produto {
    background-color: var(--color-primary-strong);
    display: grid;
 
    grid-template-columns: repeat(2, 1fr);
-   grid-row-gap: 1rem;
    box-shadow: $shadow-2;
-   max-width: 34rem;
+   max-width: 30rem;
+   max-height: 82vh;
 
    &:active {
       .produto__nome {
@@ -30,10 +35,15 @@
       }
    }
 
-   &__img {
-      width: 100%;
+   &__link {
       grid-row: 1 / 2;
       grid-column: 1 / -1;
+   }
+
+   &__img {
+      grid-row: 1 / 2;
+      grid-column: 1 / -1;
+      width: 100%;
       z-index: 1;
       max-width: 34rem;
       cursor: pointer;
@@ -56,7 +66,7 @@
    }
 
    &__nome {
-      grid-row: 1 / 2;
+      grid-row: 2 / 3;
       grid-column: 1 / -1;
       justify-self: center;
       align-self: end;
@@ -72,7 +82,7 @@
       color: $color-white;
       font-weight: 400;
       box-shadow: $shadow-2;
-      //transform: translateY(50%);
+      transform: translateY(-40%);
    }
 
    &__like,
@@ -95,6 +105,7 @@
       display: flex;
       align-items: center;
       justify-content: stretch;
+      padding-bottom: 0.5rem;
 
       svg {
          fill: $color-white;
