--- a/public/sass/parts/_storeOwnerNewstore.scss
+++ b/public/sass/parts/_storeOwnerNewstore.scss
@@ -26,7 +26,7 @@
    box-shadow: $shadow-2;
    border-radius: 2px;
    width: 30rem;
-   height: 45rem;
+   min-height: 60rem;
 
    //     margin: 6rem auto;
    //    max-width: 55rem;
