--- a/views/storeOwnerSignup.pug
+++ b/views/storeOwnerSignup.pug
@@ -1,5 +1,6 @@
 extends base
 block content
+    include _sidebar
     main.main
         .donoLojaSignup__form
             img.login__form__header(src='imagens/Lalitaa/Lalitaa_logo_transparent.png' alt='')
