--- a/views/userLogin.pug
+++ b/views/userLogin.pug
@@ -1,6 +1,7 @@
 extends base
 
 block content
+    include _sidebar
     main.main
         .login__form
             img.login__form__header(src='imagens/Lalitaa/Lalitaa_logo_transparent.png' alt='')
